--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.6.2",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.1.4",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
-    "mongoose": "^7.0.2"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
