--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.6.2",
-    "bcryptjs": "^2.4.3",
+    "apollo-server-express": "^3.12.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.1.4",
-    "express": "^4.17.2",
-    "graphql": "^16.3.0",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "stripe": "12.9.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.22"
   }
 }
