--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "license": "ISC",
     "devDependencies": {
         "concurrently": "^8.1.0"
+    },
+    "dependencies": {
+        "mongodb": "^5.6.0"
     }
 }
